<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details_error_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:padding="8dp"
    android:orientation="horizontal"
    android:gravity="center">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:tint="@color/accent"
        android:contentDescription="@string/error_connection_label"
        app:srcCompat="@drawable/ic_error_internet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/error_connection_simple_label" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_connection_action"
        android:clickable="false"
        android:focusable="false"
        style="?android:attr/borderlessButtonStyle" />

</LinearLayout>