<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Matrix Revolution" />

        <LinearLayout
            android:id="@+id/details_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_title"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical">

            <RatingBar
                android:id="@+id/details_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:numStars="5"
                android:stepSize="0.1"
                tools:rating="4.5" />

            <TextView
                android:id="@+id/details_views_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:drawableLeft="@drawable/ic_views_selector"
                android:drawableStart="@drawable/ic_views_selector"
                android:textSize="12sp"
                tools:text="88.888" />

            <TextView
                android:id="@+id/details_views_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:drawableLeft="@drawable/ic_languages_selector"
                android:drawableStart="@drawable/ic_languages_selector"
                android:textSize="12sp"
                tools:text="en-US" />

            <TextView
                android:id="@+id/details_adult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_adult_label"
                android:textColor="@color/red_500"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/details_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_icons"
            android:text="@string/details_date_label" />

        <TextView
            android:id="@+id/details_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_date_label"
            android:layout_marginBottom="8dp"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/details_overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_date"
            android:text="@string/details_overview_label" />

        <TextView
            android:id="@+id/details_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_overview_label"
            android:textColor="@color/secondary_text"
            android:textSize="13sp"
            tools:text="@string/lore" />

        <View
            android:id="@+id/details_divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/details_overview"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider" />

        <include
            android:id="@+id/details_videos_layout"
            layout="@layout/layout_details_video_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_divider_1" />

        <include
            android:id="@+id/details_reviews_layout"
            layout="@layout/layout_details_review_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/details_videos_layout" />

    </RelativeLayout>

</android.support.v7.widget.CardView>