<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.guilhermefgl.peliculas.activities.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/details_image"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/details_image_desc"
            tools:src="@mipmap/movie_background"/>

        <android.support.v7.widget.CardView
            android:layout_below="@+id/details_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    tools:text="Matrix Revolution"/>

                <LinearLayout
                    android:id="@+id/details_icons"
                    android:layout_below="@+id/details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical">

                    <RatingBar
                        android:id="@+id/details_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:numStars="5"
                        android:stepSize="0.1"
                        tools:rating="4.5"
                        style="?android:attr/ratingBarStyleSmall" />

                    <TextView
                        android:id="@+id/details_views_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:textSize="12sp"
                        android:drawableLeft="@drawable/ic_views"
                        android:drawableStart="@drawable/ic_views"
                        tools:text="88.888" />

                    <TextView
                        android:id="@+id/details_views_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:textSize="12sp"
                        android:drawableLeft="@drawable/ic_language"
                        android:drawableStart="@drawable/ic_language"
                        tools:text="en-US" />

                    <TextView
                        android:id="@+id/details_adult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/red_500"
                        android:text="@string/details_adult_label" />

                </LinearLayout>

                <TextView
                    android:id="@+id/details_date_label"
                    android:layout_below="@+id/details_icons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginEnd="4dp"
                    android:textStyle="bold"
                    android:text="@string/details_date_label" />

                <TextView
                    android:id="@+id/details_date"
                    android:layout_below="@+id/details_icons"
                    android:layout_toRightOf="@+id/details_date_label"
                    android:layout_toEndOf="@+id/details_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/details_overview_label"
                    android:layout_below="@+id/details_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/details_overview_label"/>

                <TextView
                    android:id="@+id/details_overview"
                    android:layout_below="@+id/details_overview_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:textSize="13sp"
                    android:textColor="@color/secondary_text"
                    android:ellipsize="end"
                    tools:text="@string/lore"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
